--- a/EDA with SQL lab.ipynb
+++ b/EDA with SQL lab.ipynb
@@ -113,36 +113,36 @@
       "Requirement already satisfied: sqlalchemy>=0.7.3 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ibm_db_sa) (1.3.9)\n",
       "Requirement already satisfied: ipython-sql in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (0.4.0)\n",
       "Requirement already satisfied: prettytable<1 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython-sql) (0.7.2)\n",
-      "Requirement already satisfied: sqlalchemy>=0.6.7 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython-sql) (1.3.9)\n",
-      "Requirement already satisfied: ipython>=1.0 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython-sql) (8.0.1)\n",
-      "Requirement already satisfied: ipython-genutils>=0.1.0 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython-sql) (0.2.0)\n",
-      "Requirement already satisfied: sqlparse in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython-sql) (0.4.2)\n",
       "Requirement already satisfied: six in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython-sql) (1.16.0)\n",
-      "Requirement already satisfied: traitlets>=5 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (5.1.1)\n",
+      "Requirement already satisfied: ipython-genutils>=0.1.0 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython-sql) (0.2.0)\n",
+      "Requirement already satisfied: ipython>=1.0 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython-sql) (8.0.1)\n",
+      "Requirement already satisfied: sqlparse in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython-sql) (0.4.2)\n",
+      "Requirement already satisfied: sqlalchemy>=0.6.7 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython-sql) (1.3.9)\n",
       "Requirement already satisfied: decorator in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (5.1.1)\n",
-      "Requirement already satisfied: pickleshare in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (0.7.5)\n",
-      "Requirement already satisfied: stack-data in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (0.1.4)\n",
-      "Requirement already satisfied: black in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (22.1.0)\n",
-      "Requirement already satisfied: appnope in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (0.1.2)\n",
-      "Requirement already satisfied: jedi>=0.16 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (0.18.1)\n",
-      "Requirement already satisfied: backcall in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (0.2.0)\n",
-      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (3.0.28)\n",
-      "Requirement already satisfied: pexpect>4.3 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (4.8.0)\n",
       "Requirement already satisfied: pygments in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (2.11.2)\n",
-      "Requirement already satisfied: matplotlib-inline in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (0.1.3)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (3.0.28)\n",
+      "Requirement already satisfied: jedi>=0.16 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (0.18.1)\n",
+      "Requirement already satisfied: appnope in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (0.1.2)\n",
+      "Requirement already satisfied: traitlets>=5 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (5.1.1)\n",
+      "Requirement already satisfied: backcall in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (0.2.0)\n",
+      "Requirement already satisfied: pickleshare in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (0.7.5)\n",
       "Requirement already satisfied: setuptools>=18.5 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (60.8.2)\n",
+      "Requirement already satisfied: matplotlib-inline in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (0.1.3)\n",
+      "Requirement already satisfied: black in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (22.1.0)\n",
+      "Requirement already satisfied: pexpect>4.3 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (4.8.0)\n",
+      "Requirement already satisfied: stack-data in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from ipython>=1.0->ipython-sql) (0.1.4)\n",
       "Requirement already satisfied: parso<0.9.0,>=0.8.0 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from jedi>=0.16->ipython>=1.0->ipython-sql) (0.8.3)\n",
       "Requirement already satisfied: ptyprocess>=0.5 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from pexpect>4.3->ipython>=1.0->ipython-sql) (0.7.0)\n",
       "Requirement already satisfied: wcwidth in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=1.0->ipython-sql) (0.2.5)\n",
       "Requirement already satisfied: pathspec>=0.9.0 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from black->ipython>=1.0->ipython-sql) (0.9.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.10.0.0 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from black->ipython>=1.0->ipython-sql) (4.0.1)\n",
+      "Requirement already satisfied: click>=8.0.0 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from black->ipython>=1.0->ipython-sql) (8.0.3)\n",
+      "Requirement already satisfied: mypy-extensions>=0.4.3 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from black->ipython>=1.0->ipython-sql) (0.4.3)\n",
       "Requirement already satisfied: tomli>=1.1.0 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from black->ipython>=1.0->ipython-sql) (2.0.1)\n",
       "Requirement already satisfied: platformdirs>=2 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from black->ipython>=1.0->ipython-sql) (2.5.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.10.0.0 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from black->ipython>=1.0->ipython-sql) (4.0.1)\n",
-      "Requirement already satisfied: mypy-extensions>=0.4.3 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from black->ipython>=1.0->ipython-sql) (0.4.3)\n",
-      "Requirement already satisfied: click>=8.0.0 in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from black->ipython>=1.0->ipython-sql) (8.0.3)\n",
+      "Requirement already satisfied: executing in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from stack-data->ipython>=1.0->ipython-sql) (0.8.2)\n",
       "Requirement already satisfied: pure-eval in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from stack-data->ipython>=1.0->ipython-sql) (0.2.2)\n",
-      "Requirement already satisfied: asttokens in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from stack-data->ipython>=1.0->ipython-sql) (2.0.5)\n",
-      "Requirement already satisfied: executing in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from stack-data->ipython>=1.0->ipython-sql) (0.8.2)\n"
+      "Requirement already satisfied: asttokens in ./env_IBM_Applied_Data_Science_Capstone/lib/python3.8/site-packages (from stack-data->ipython>=1.0->ipython-sql) (2.0.5)\n"
      ]
     }
    ],
@@ -218,8 +218,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The code was removed by Watson Studio for sharing.\n",
-    "# TODO @hidden_cell"
+    "from secret import sql_user, sql_pass\n",
+    "\n",
+    "%sql ibm_db_sa://{sql_user}:{sql_pass}@764264db-9824-4b7c-82df-40d1b13897c2.bs2io90l08kqb1od8lcg.databases.appdomain.cloud:32536/bludb?authSource=admin&replicaSet=replset&security=SSL"
    ]
   },
   {
