Implement auto update of the 404 error page

--- a/update_docs.ipynb
+++ b/update_docs.ipynb
@@ -13,7 +13,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Notebook START time: 2022-07-01 17:00:50.395419 UTC\n",
+      "Notebook START time: 2022-07-01 23:34:14.983827 UTC\n",
       "\n"
      ]
     }
@@ -34,6 +34,7 @@
     "import urllib\n",
     "import subprocess\n",
     "from pathlib import Path\n",
+    "import wget\n",
     "import nbformat\n",
     "from nbconvert.preprocessors import Preprocessor\n",
     "from nbconvert import HTMLExporter\n",
@@ -59,18 +60,71 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ff7660fd-46b3-43f8-bf01-4afbc323ed5c",
+   "id": "137d51b5-cfc8-48ae-bc6a-006086354591",
    "metadata": {},
    "outputs": [],
    "source": [
     "OUTPUT_FILES_DIR = \"index_files\"\n",
     "\n",
-    "DOCS_DIR = Path.cwd() / \"docs\""
+    "DOCS_DIR = Path.cwd() / \"docs\"\n",
+    "\n",
+    "ERROR404PAGE_FILE = Path(\"404.html\")\n",
+    "ERROR404PAGE_DOWNLOAD_URL = (\n",
+    "    \"https://raw.githubusercontent.com/sentinel-1/\"\n",
+    "    \"sentinel-1.github.io/master/docs/404.html\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "d84c4bc4-d774-46f6-bcb8-d7c11fb57788",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading the latest \"404.html\" file:\n",
+      "100% [................................................................................] 3817 / 3817"
+     ]
+    }
+   ],
+   "source": [
+    "def get_404error_page_download_date() -> datetime:\n",
+    "    return datetime.fromtimestamp(\n",
+    "        ERROR404PAGE_FILE.stat().st_ctime\n",
+    "    ).astimezone(timezone.utc)\n",
+    "\n",
+    "\n",
+    "if (not ERROR404PAGE_FILE.exists()\n",
+    "        or (datetime.utcnow().replace(tzinfo=timezone.utc)\n",
+    "            - get_404error_page_download_date()) > timedelta(days=1)):\n",
+    "    \n",
+    "    if (ERROR404PAGE_FILE.exists()):\n",
+    "        ERROR404PAGE_FILE.unlink()\n",
+    "    print('Downloading the latest \"404.html\" file:')\n",
+    "    ERROR404PAGE_FILE = Path(wget.download(ERROR404PAGE_DOWNLOAD_URL,\n",
+    "                                           out=str(ERROR404PAGE_FILE)))\n",
+    "else:\n",
+    "    print('The \"404.html\" file has been updated lately '\n",
+    "          f'({get_404error_page_download_date():%Y-%m-%d %H:%M:%S %Z}), '\n",
+    "          'skipping download.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9d851c19-77bc-46d8-aadd-9397a7643fa4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cp 404.html docs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "80406f45-89e4-4011-b727-ec0b2b13e51e",
    "metadata": {},
    "outputs": [],
@@ -106,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "d175154c-c3a4-4a73-9e86-0e510c2985ce",
    "metadata": {},
    "outputs": [],
@@ -157,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "05a288df-066b-4075-a1d9-c51227309943",
    "metadata": {},
    "outputs": [
@@ -300,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "9c911c50-bfe0-4cfe-aab4-df689adc80b6",
    "metadata": {
     "tags": []
@@ -497,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "1c420b7a-5958-45ee-9090-b61e165be511",
    "metadata": {},
    "outputs": [
@@ -707,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "3b3cb649-5be8-4ee4-89ef-7e85ade284b1",
    "metadata": {},
    "outputs": [
@@ -716,9 +770,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " ** Total Elapsed time: 0:00:03.701734 ** \n",
+      " ** Total Elapsed time: 0:00:04.317733 ** \n",
       "\n",
-      "Notebook END time: 2022-07-01 17:00:54.097260 UTC\n",
+      "Notebook END time: 2022-07-01 23:34:19.301617 UTC\n",
       "\n"
      ]
     }
